frame/support/test/tests/construct_runtime_ui/unimported_config_part.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> $DIR/unimported_config_part.rs:50:11
   |
50 |         System: system::{Pallet, Call, Storage, Config, Event<T>},
   |                 ^^^^^^ use of undeclared crate or module `system`

error[E0433]: failed to resolve: use of undeclared crate or module `system`
  --> $DIR/unimported_config_part.rs:44:1
   |
44 | / construct_runtime! {
45 | |     pub enum Runtime where
46 | |         Block = Block,
47 | |         NodeBlock = Block,
...  |
52 | |     }
53 | | }
   | |_^ not found in `system`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
   |
2  | use frame_system::RawOrigin;
   |

error: use of deprecated struct `PalletConfig`: `Pallet` does not have the `Config` part imported in construct_runtime, perhaps you have forgotten to include it?
  --> $DIR/unimported_config_part.rs:56:10
   |
56 |     let _ = PalletConfig { foo: 1 };
   |             ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unimported_config_part.rs:1:9
   |
1  | #![deny(deprecated)]
   |         ^^^^^^^^^^

error[E0277]: the trait bound `Runtime: frame_system::Config` is not satisfied
  --> $DIR/unimported_config_part.rs:42:6
   |
11 |     pub trait Config: frame_system::Config {}
   |                       -------------------- required by this bound in `pallet::Config`
...
42 | impl pallet::Config for Runtime {}
   |      ^^^^^^^^^^^^^^ the trait `frame_system::Config` is not implemented for `Runtime`
